# agri-perception

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/demos/: baseline_metrics_demo.py  edge_cases_demo.py  multiclass_detection_demo.py  severity_scoring_demo.py
src/agri_perception/data/: coco_to_yolo.py  data_preparation.py  dataset_analysis.py
src/agri_perception/modeling/: yolo_training.py
src/agri_perception/pipeline/: inference_pipeline.py  temporal_consistency.py
